--- a/TODO.txt
+++ b/TODO.txt
@@ -1,4 +1,3 @@
-TODO posouvat pri sampling method (vertical, horizontal, diagonal na dalsi sloupec, radek, ...)
 TODO pri zmene background se nezmeni to, co jiz bylo nakresleno
 TODO pri nahrani obrazku se obrazek nenahraje na prvni canvas
 TODO jestli funguje tlacitko reset canvas na vsechno a pokud ne tak fix
@@ -14,4 +13,5 @@ TODO nejake tlacitko help (asi logo otazniku), ktere popise pouzivani aplikace s
 Jestli me neco napad z https://sedmicha.github.io/drippaint/
 TODO nejak zajistit, ze prvne je nutne nahrat obrazek, nez bude mozne kreslit
 TODO zoom in zoom out na input image
-TODO fix sipka rozhozena u vizualizace
+TODO fix sipka rozhozena u vizualizace pro horizontalni sampling methodu
+TODO fix ze mi zmizelo ohraniceni kreslitka s novou verzi html jsem si toho vsiml
