Move css into a separated file

--- a/TODO.txt
+++ b/TODO.txt
@@ -16,3 +16,4 @@ TODO zoom in zoom out na input image
 TODO fix sipka rozhozena u vizualizace pro horizontalni sampling methodu
 TODO fix ze mi zmizelo ohraniceni kreslitka s novou verzi html jsem si toho vsiml
 TODO jestli nejak udelat ctrl-Z jako krok zpet
+TODO zmensit sirku aby se veslo na jednu obrazovku
