--- a/TODO.txt
+++ b/TODO.txt
@@ -1,6 +1,5 @@
 TODO pri zmene background se nezmeni to, co jiz bylo nakresleno
 TODO jestli funguje tlacitko reset canvas na vsechno a pokud ne tak fix
-TODO rozsahy popojizdecich veci a default hodnoty
 TODO nejake tlacitko help (asi logo otazniku), ktere popise pouzivani aplikace s vyskakovacim oknem
 TODO nejak zajistit, ze prvne je nutne nahrat obrazek, nez bude mozne kreslit - nebo nejakej text do canvasu, ze prvne se musi nahrat obrazek
 TODO zoom in zoom out na input image???
@@ -11,3 +10,4 @@ TODO ze se obrazek po nacteni resizuje zmenit. Mely by se canvas vejit na obrazo
 TODO clear canvas udelat popup okno: Are you sure? Current painting will be lost!
 TODO saving obrazku
 TODO ze pokud uzavru stranku, tak to zustane ulozene a po jejim opetovnem nacteni se to zase nahodi to stejne???
+TODO na mensi obrazovce se to nevleze na obrazovku - fixnout treba tim, ze sekce budou na rozkliknuti
