Change header color

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,10 +1,10 @@
-TODO pri zmene background se nezmeni to, co jiz bylo nakresleno | nebo uplne odstranit background color
-TODO nejake tlacitko help (asi logo otazniku), ktere popise pouzivani aplikace s vyskakovacim oknem
-TODO nejak zajistit, ze prvne je nutne nahrat obrazek, nez bude mozne kreslit - nebo nejakej text do canvasu, ze prvne se musi nahrat obrazek
-TODO zoom in zoom out na input image???
 TODO fix sipka rozhozena u vizualizace pro horizontalni sampling methodu
+TODO pri zmene background se nezmeni to, co jiz bylo nakresleno | nebo uplne odstranit background color
+TODO nejak zajistit, ze prvne je nutne nahrat obrazek, nez bude mozne kreslit - nebo nejakej text do canvasu, ze prvne se musi nahrat obrazek
 TODO zmensit sirku aby se veslo na jednu obrazovku
 TODO ze se obrazek po nacteni resizuje zmenit. Mely by se canvas vejit na obrazoku, ale proporce zustat stejny.
-TODO na mensi obrazovce se to nevleze na obrazovku - fixnout treba tim, ze sekce budou na rozkliknuti
+TODO na mensi obrazovce se to nevleze na obrazovku na vysku - fixnout treba tim, ze sekce budou na rozkliknuti
 TODO kdyz se neco nakresli a pak se nacte obrazek na drawing, tak se vsechny kresleni smazou po opetovnem odstraneni obrazku pomoci checkboxu
-TODO border kolem canvasů
+
+TODO zoom in zoom out na input image???
+TODO nejake tlacitko help (asi logo otazniku), ktere popise pouzivani aplikace s vyskakovacim oknem
